<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorkit"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/catDescription"
        android:onClick="OnClickImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:srcCompat="@drawable/cat" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/learn_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginEnd="75sp"
            android:backgroundTint="@color/button_color"
            android:onClick="OnClickLearning"
            android:text="@string/start_button_text"
            android:textColor="@color/Text_button_color"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginEnd="75sp"
            android:backgroundTint="@color/button_color"
            android:onClick="OnClickAdd"
            android:text="@string/add_button_text"
            android:textColor="@color/Text_button_color"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/dictionary_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginEnd="75sp"
            android:backgroundTint="@color/button_color"
            android:onClick="OnClickDictionary"
            android:text="@string/dictionary"
            android:textColor="@color/Text_button_color"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75sp"
            android:layout_marginEnd="75sp"
            android:backgroundTint="@color/button_color"
            android:onClick="OnClickSettings"
            android:text="@string/settings"
            android:textColor="@color/Text_button_color"
            tools:ignore="VisualLintButtonSize" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoname" />

</androidx.constraintlayout.widget.ConstraintLayout>